// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser return statements parses expression returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "type": "Return",
            "value": Call {
              "args": [],
              "callee": Variable {
                "name": {
                  "isReserved": false,
                  "kind": "Identifier",
                  "literal": undefined,
                  "location": {
                    "end": {
                      "column": -9,
                      "line": -9,
                    },
                    "start": {
                      "column": -9,
                      "line": -9,
                    },
                  },
                  "text": "RebootSystem",
                },
                "type": "Variable",
              },
              "closingParen": {
                "isReserved": false,
                "kind": "RightParen",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": ")",
              },
              "optional": false,
              "type": "Call",
            },
          },
        ],
        "type": "Block",
      },
      "endKeyword": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser return statements parses literal returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "type": "Return",
            "value": Literal {
              "_location": undefined,
              "type": "Literal",
              "value": BrsString {
                "kind": 3,
                "value": "test",
              },
            },
          },
        ],
        "type": "Block",
      },
      "endKeyword": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser return statements parses void returns 1`] = `
[
  Function {
    "func": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Return {
            "tokens": {
              "return": {
                "isReserved": true,
                "kind": "Return",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "return",
              },
            },
            "type": "Return",
            "value": undefined,
          },
        ],
        "type": "Block",
      },
      "endKeyword": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;
